--- a/kube_dashboard/dashboard-controller.yaml
+++ b/kube_dashboard/dashboard-controller.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: kubernetes-dashboard
-        image: docker.io/googlecontainer/kubernetes-dashboard-amd64:v1.6.1
+        image: registry.cn-hangzhou.aliyuncs.com/lvpengze/kubernetes-dashboard-amd64:v1.5.1
         imagePullPolicy: Always
         ports:
         - containerPort: 9090
