--- a/kube_dashboard/dashboard-service.yaml
+++ b/kube_dashboard/dashboard-service.yaml
@@ -3,13 +3,23 @@ apiVersion: v1
 metadata:
   labels:
     app: kubernetes-dashboard
+    kubernetes.io/cluster-service: "true"
+    kubernetes.io/name: "KubeDashboard"
   name: kubernetes-dashboard
   namespace: kube-system
+## proxy版本，通过在master端(已安装flannel)使用kubectl cluster-info获取代理地址进行访问
 spec:
-  type: NodePort
   ports:
   - port: 80
     targetPort: 9090
-    nodePort: 30010
   selector:
     app: kubernetes-dashboard
+## nodePort版本
+# spec:
+#   type: NodePort
+#   ports:
+#   - port: 80
+#     targetPort: 9090
+#     nodePort: 30010
+#   selector:
+#     app: kubernetes-dashboard
