--- a/kube_cluster_monitor/grafana-service.yaml
+++ b/kube_cluster_monitor/grafana-service.yaml
@@ -1,15 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: monitoring-grafana
+  namespace: kube-system
   labels:
     kubernetes.io/cluster-service: 'true'
     kubernetes.io/name: monitoring-grafana
-  name: monitoring-grafana
-  namespace: kube-system
 spec:
-  type: NodePort
   ports:
   - port: 80
     targetPort: 3000
   selector:
-    name: influxGrafana
+    k8s-app: influxGrafana
