--- a/kube_cluster_monitor/influxdb-grafana-controller.yaml
+++ b/kube_cluster_monitor/influxdb-grafana-controller.yaml
@@ -1,34 +1,33 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  labels:
-    name: influxGrafana
   name: influxdb-grafana
   namespace: kube-system
-  selfLink: /api/v1/namespaces/kube-system/replicationcontrollers/influxdb-grafana
+  labels:
+    k8s-app: influxGrafana
+  #selfLink: /api/v1/namespaces/kube-system/replicationcontrollers/influxdb-grafana
 spec:
   replicas: 1
   selector:
-    name: influxGrafana
+    k8s-app: influxGrafana
   template:
     metadata:
-      creationTimestamp: null
       labels:
-        name: influxGrafana
+        k8s-app: influxGrafana
     spec:
       containers:
       - image: kubernetes/heapster_influxdb:v0.5
-        imagePullPolicy: IfNotPresent
         name: influxdb
-        resources: {}
-        terminationMessagePath: /dev/termination-log
         volumeMounts:
-        - mountPath: /data
-          name: influxdb-storage
-      - env:
+        - name: influxdb-storage
+          mountPath: /data
+
+      - image: docker.io/xiechengsheng/heapster-grafana-amd64:v4.0.2
+        name: grafana
+        env:
         #api-server的地址
         - name: INFLUXDB_SERVICE_URL
-          value: http://192.168.0.10:8080
+          value: http://10.254.0.4:8086
         - name: GF_AUTH_BASIC_ENABLED
           value: "false"
         - name: GF_AUTH_ANONYMOUS_ENABLED
@@ -37,18 +36,10 @@ spec:
           value: Admin
         - name: GF_SERVER_ROOT_URL
           value: /api/v1/proxy/namespaces/kube-system/services/monitoring-grafana/
-        image: docker.io/xiechengsheng/heapster-grafana-amd64:v4.0.2
-        imagePullPolicy: Never
-        name: grafana
-        resources: {}
         terminationMessagePath: /dev/termination-log
         volumeMounts:
         - mountPath: /var
           name: grafana-storage
-      dnsPolicy: ClusterFirst
-      restartPolicy: Always
-      securityContext: {}
-      terminationGracePeriodSeconds: 30
       volumes:
       - emptyDir: {}
         name: influxdb-storage
