--- a/kube_cluster_monitor/influxdb-service.yaml
+++ b/kube_cluster_monitor/influxdb-service.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels: null
   name: monitoring-influxdb
   namespace: kube-system
+  labels:
+    kubernetes.io/cluster-service: "true"
+    kubernetes.io/name: "InfluxDB"
 spec:
   #指定clusterIP地址，用于headster使用
   clusterIP: 10.254.0.4
@@ -15,4 +17,4 @@ spec:
     port: 8086
     targetPort: 8086
   selector:
-    name: influxGrafana
+    k8s-app: influxGrafana
