--- a/kube-system/kube_dashboard/dashboard-service.yaml
+++ b/kube-system/kube_dashboard/dashboard-service.yaml
@@ -7,19 +7,19 @@ metadata:
     kubernetes.io/name: "KubeDashboard"
   name: kubernetes-dashboard
   namespace: kube-system
-## proxy版本，通过在master端(已安装flannel)使用kubectl cluster-info获取代理地址进行访问
-spec:
-  ports:
-  - port: 80
-    targetPort: 9090
-  selector:
-    app: kubernetes-dashboard
-## nodePort版本
+# ## proxy版本，通过在master端(已安装flannel)使用kubectl cluster-info获取代理地址进行访问
 # spec:
-#   type: NodePort
 #   ports:
 #   - port: 80
 #     targetPort: 9090
-#     nodePort: 30010
 #   selector:
 #     app: kubernetes-dashboard
+# nodePort版本
+spec:
+  type: NodePort
+  ports:
+  - port: 80
+    targetPort: 9090
+    nodePort: 30010
+  selector:
+    app: kubernetes-dashboard
