--- a/k8s_mst/etcd.service
+++ b/k8s_mst/etcd.service
@@ -8,8 +8,7 @@ Wants=network-online.target
 [Service]
 User=root
 Type=notify
-EnvironmentFile=/etc/etcd/etcd.conf
-ExecStart=/usr/bin/etcd --name=${ETCD_NAME} --data-dir=${ETCD_DATA_DIR} --listen-client-urls=${ETCD_LISTEN_CLIENT_URLS} --advertise-client-urls=${ETCD_ADVERTISE_CLIENT_URLS}
+ExecStart=/usr/bin/etcd --name="default" --data-dir="/var/lib/etcd/default.etcd" --listen-client-urls="http://0.0.0.0:2379" --advertise-client-urls="http://0.0.0.0:2379"
 Restart=on-failure
 RestartSec=10s
 LimitNOFILE=40000
