--- a/kube-system/kube_cluster_monitor/influxdb-grafana-controller.yaml
+++ b/kube-system/kube_cluster_monitor/influxdb-grafana-controller.yaml
@@ -5,7 +5,6 @@ metadata:
   namespace: kube-system
   labels:
     k8s-app: influxGrafana
-  #selfLink: /api/v1/namespaces/kube-system/replicationcontrollers/influxdb-grafana
 spec:
   replicas: 1
   selector:
@@ -14,7 +13,14 @@ spec:
     metadata:
       labels:
         k8s-app: influxGrafana
+      #通过tolerations将pod部署到master节点（已通过kubectl taint nodes k8s-mst node-role.kubernetes.io/master="true":NoSchedule命令为master节点添加污点）
+      annotations:
+        scheduler.alpha.kubernetes.io/tolerations: '[{"key":"node-role.kubernetes.io/master", "operator":"Equal", "value":"true", "effect":"NoSchedule"}]'
     spec:
+      #配合taints使用，pods只能部署到master节点
+      nodeSelector:
+        kubernetes.io/hostname: k8s-mst
+            
       containers:
       - image: kubernetes/heapster_influxdb:v0.5
         name: influxdb
