添加了kube-system部署任务的资源限制

--- a/kube-system/kube_cluster_monitor/heapster-controller.yaml
+++ b/kube-system/kube_cluster_monitor/heapster-controller.yaml
@@ -27,6 +27,10 @@ spec:
       containers:
       - image: registry.cn-hangzhou.aliyuncs.com/lvpengze/heapster:canary
         name: heapster
+        resources:
+          limits:
+            cpu: 100m
+            memory: 300Mi
         command:
         - /heapster
         #api-server的地址
