--- a/kube-system/kube_cluster_monitor/influxdb-grafana-controller.yaml
+++ b/kube-system/kube_cluster_monitor/influxdb-grafana-controller.yaml
@@ -25,7 +25,7 @@ spec:
       - image: registry.cn-hangzhou.aliyuncs.com/lvpengze/heapster_influxdb:v0.5
         name: influxdb
         resources:
-          limits:
+          requests:
             cpu: 100m
             memory: 200Mi
         volumeMounts:
@@ -35,7 +35,7 @@ spec:
       - image: registry.cn-hangzhou.aliyuncs.com/lvpengze/heapster-grafana-amd64:v4.0.2
         name: grafana
         resources:
-          limits:
+          requests:
             cpu: 100m
             memory: 100Mi
         env:
@@ -55,7 +55,11 @@ spec:
         - mountPath: /var
           name: grafana-storage
       volumes:
-      - emptyDir: {}
+      - #emptyDir: {}
         name: influxdb-storage
-      - emptyDir: {}
+        hostPath: 
+          path: /influxdb-storage      #宿主机挂载点
+      - #emptyDir: {}
         name: grafana-storage
+        hostPath: 
+          path: /grafana-storage      #宿主机挂载点
